Auth flow fixes. Release 1.1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="from_value">From value</string>
     <string name="history">History</string>
     <string name="refresh">Refresh</string>
+    <string name="error_auth">Wrong auth data. Please try again.</string>
 </resources>
